# Swan-Plan

./: README.md  一些对于水面机器人的想法.md
13.spi_bmi088/: .mxproject  spi_bmi088.ioc
13.spi_bmi088/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
13.spi_bmi088/MDK-ARM/: JLinkLog.txt  control_get.h  spi_bmi088.uvguix.86152  spi_bmi088.uvguix.DELL  spi_bmi088.uvoptx  spi_bmi088.uvprojx  startup_stm32f407xx.lst
13.spi_bmi088/Src/: dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
SLAM/: 系统和摄像头测试.docx
SLAM/pre_img/: ORB.py  contours.py
check middle/: 1.docx  goobot pre_1210.docx  top.docx
project/: .mxproject  usart.ioc
project/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
project/MDK-ARM/: JLinkLog.txt  startup_stm32f407xx.lst  usart.uvguix.86152  usart.uvguix.DELL  usart.uvoptx  usart.uvprojx
project/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
socket/: cvAlgorithmsClientSocket.py  cvAlgorithmsServerSocket.py
socket/cppClient/: CMakeLists.txt  cvAlgorithmsClientCpp.cpp
socket/cppClient/include/: base64Converter.h  jsonStringGenerator.h
socket/cppClient/src/: base64Converter.cpp
socket/utils/: imageEncoderDecoder.py
未名湖天鹅计划/: RoboMaster开发C板 学习记录.md
未名湖天鹅计划/final_building/: 022035025.stp.SLDPRT  530470210.stp.SLDPRT  Addition_bearing.SLDPRT  CP_Elec_10x10.stp.SLDPRT  CP_Elec_5x53.stp.SLDPRT  CP_Elec_8x10.stp.SLDPRT  CUI_PJ-102A-18.stp.SLDPRT  CUI_PJ-102A-21.stp.SLDPRT  CUI_PJ-102A-7.stp.SLDPRT  CUI_PJ-102A.stp.SLDPRT  HTSSOP_28_1EP_44x97mm_P065mm.stp.SLDPRT  JST_B3B_EH_A.stp.SLDPRT  (+73 more)
测试规划/: 动力测试.docx  静态防水测试.docx
(+137 files in other folders)
